Update: Finish Landing Page Practice

--- a/Landing Page Practice/Fitness Landing Page.html
+++ b/Landing Page Practice/Fitness Landing Page.html
@@ -20,8 +20,9 @@
     </style>
   </head>
   <body class="bg-white">
-    <nav class="flex justify-center items-center text-xl font-semibold pt-15">
-      <p class="text-light-green mr-[70vh]">Treine.me</p>
+    <nav class="flex justify-center items-center text-2xl font-semibold pt-15">
+      <p class="text-light-green mr-[70vh]">treine.me</p>
+
       <ul class="flex gap-15">
         <li>Home</li>
         <li>About</li>
@@ -43,9 +44,13 @@
           <p class="font-sans text-white">Start now</p>
         </button>
       </div>
-      <img src="fitness.png" />
+
+      <img src="fitness.svg" />
     </div>
 
+    <footer class="absolute right-0 bottom-0">
+      <img src="balls.svg" />
+    </footer>
     <footer class="flex justify-center items-center">
       <p>send us a message <b>@treine.me</b></p>
     </footer>
