Update: Html+Css Course. Note: Starting again but with experience

--- a/Tailwind Course/tailwind-practice/index.html
+++ b/Tailwind Course/tailwind-practice/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>James is cool</title>
+    <title>Math Tutoring</title>
 
     <!-- LINK FOR ICON SET -->
     <link
@@ -13,11 +13,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
+  <body class="text-slate-900 min-h-screen relative">
     <header>
-      <h1>Auckland Maths Tutoring</h1>
+      <h1>Plaridel Maths Tutoring</h1>
       <button>Book a session</button>
       <div>
         <button>Book a session</button>
@@ -126,7 +128,7 @@
           <div>
             <div>
               <div>
-                <p>Pierre</p>
+                <p>Mina</p>
                 <p>Student</p>
               </div>
               <p>
@@ -138,7 +140,7 @@
             </div>
             <div>
               <div>
-                <p>Danielle</p>
+                <p>Ghayle</p>
                 <p>Student</p>
               </div>
               <p>
@@ -149,7 +151,7 @@
             </div>
             <div>
               <div>
-                <p>India</p>
+                <p>Dew</p>
                 <p>Student</p>
               </div>
               <p>
@@ -175,7 +177,7 @@
             </div>
             <div>
               <div>
-                <p>Douglas</p>
+                <p>Malupiton</p>
                 <p>Student</p>
               </div>
               <p>
@@ -192,7 +194,7 @@
       <section id="services">
         <p>Book Today</p>
         <p>Send Me a message</p>
-        <h3>+64 21 42 24 833</h3>
+        <h3>+69 69 69 69 123</h3>
       </section>
     </main>
     <footer>
