Update: Css Course

--- a/Tailwind Course/Vanilla html+css Course/Google Home Page/index.html
+++ b/Tailwind Course/Vanilla html+css Course/Google Home Page/index.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="">
+        <a class="grayLink" href="">
           <p>About</p>
         </a>
-        <a href="">
+        <a class="grayLink" href="">
           <p>Store</p>
         </a>
       </nav>
+      <section>
+        <a class="whiteLink" href="">
+          <p>Gmail</p>
+        </a>
+        <a class="whiteLink" href="">
+          <p>Images</p>
+        </a>
+        <a class="whiteLink" href="">
+          <img />
+        </a>
+        <a href="">
+          <img />
+        </a>
+      </section>
     </header>
-    <section>
-      <a href="">
-        <p>Gmail</p>
-      </a>
-      <a href="">
-        <p>Images</p>
-      </a>
-      <a href="">
-        <img />
-      </a>
-      <a href="">
-        <img />
-      </a>
-    </section>
     <main>
       <div>
-        <h1>Google!</h1>
+        <h1 class="headerText">Google!</h1>
       </div>
       <div>
         <input />
@@ -41,8 +42,30 @@
           <button>icon</button>
         </div>
       </div>
-      <div>34:52</div>
+      <div>
+        <button><p>Google Search</p></button>
+        <button><p>I'm Feeling Lucky</p></button>
+      </div>
+      <div>
+        <p>Google offered in:<span> Filipino</span></p>
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <section>
+        <p>Philippines</p>
+      </section>
+      <section>
+        <div>
+          <a>Advertising</a>
+          <a>Business</a>
+          <a>How Search Works</a>
+        </div>
+        <div>
+          <a>Privacy</a>
+          <a>Terms</a>
+          <a>Settings</a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
