Mobile View finish

--- a/Landing Page Practice 2/index.html
+++ b/Landing Page Practice 2/index.html
@@ -242,5 +242,167 @@
         </button>
       </div>
     </section>
+
+    <!-- Get in touch Section -->
+    <section class="bg-[#F3F3F3]">
+      <!-- Header -->
+      <div class="text-center p-30 space-y-10">
+        <h2 class="font-bold text-8xl text-[#252B42]">Get In Touch</h2>
+        <p class="text-4xl text-[#737373]">
+          Problems trying to resolve<br />
+          the conflict between the two major <br />realms of Classical
+          physics:<br />
+          Newtonian mechanics
+        </p>
+      </div>
+
+      <!-- Contacts -->
+      <div class="px-30 space-y-12 pb-50">
+        <div
+          class="flex flex-col text-center items-center bg-white text-black py-25 space-y-10"
+        >
+          <img class="w-50" src="call-logo-xl.png" />
+          <div class="text-4xl font-semibold space-y-2">
+            <p>georgia.young@example.com</p>
+            <p>georgia.young@ple.com</p>
+          </div>
+          <h6 class="text-5xl font-bold">Get Support</h6>
+          <button
+            class="text-4xl font-semibold py-9 px-12 rounded-2xl border border-[#FFA62B] text-[#FFA62B]"
+          >
+            <p>Submit Request</p>
+          </button>
+        </div>
+
+        <div
+          class="flex flex-col text-center items-center bg-[#252B42] text-white py-25 space-y-10"
+        >
+          <img class="w-50" src="loc-logo-xl.png" />
+          <div class="text-4xl font-semibold space-y-2">
+            <p>georgia.young@example.com</p>
+            <p>georgia.young@ple.com</p>
+          </div>
+          <h6 class="text-5xl font-bold">Get Support</h6>
+          <button
+            class="text-4xl font-semibold py-9 px-12 rounded-2xl border border-white text-white"
+          >
+            <p>Submit Request</p>
+          </button>
+        </div>
+
+        <div
+          class="flex flex-col text-center items-center bg-white text-black py-25 space-y-10"
+        >
+          <img class="w-50" src="send-logo-xl.png" />
+          <div class="text-4xl font-semibold space-y-2">
+            <p>georgia.young@example.com</p>
+            <p>georgia.young@ple.com</p>
+          </div>
+          <h6 class="text-5xl font-bold">Get Support</h6>
+          <button
+            class="text-4xl font-semibold py-9 px-12 rounded-2xl border border-[#FFA62B] text-[#FFA62B]"
+          >
+            <p>Submit Request</p>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="bg-white space-y-16 px-30 py-15">
+      <div class="space-y-10">
+        <h5 class="text-6xl font-bold text-black">
+          Consulting Agency For Your Business
+        </h5>
+        <p class="text-[#737373] text-4xl">
+          the quick fox jumps over the lazy dog
+        </p>
+      </div>
+      <button
+        class="text-white font-semibold text-4xl rounded-2xl px-16 py-10 bg-[#FFA62B]"
+      >
+        <p>Contact Us</p>
+      </button>
+    </section>
+
+    <footer>
+      <div class="text-white bg-[#16697A]">
+        <div class="px-30 space-y-20 py-20">
+          <div>
+            <h6 class="font-bold text-5xl mb-10">Company info</h6>
+            <div class="space-y-7 text-4xl">
+              <p>About Us</p>
+              <p>Carrier</p>
+              <p>We are hiring</p>
+              <p>Blog</p>
+            </div>
+          </div>
+
+          <div>
+            <h6 class="font-bold text-5xl mb-10">Legal</h6>
+            <div class="space-y-7 text-4xl">
+              <p>About Us</p>
+              <p>Carrier</p>
+              <p>We are hiring</p>
+              <p>Blog</p>
+            </div>
+          </div>
+
+          <div>
+            <h6 class="font-bold text-5xl mb-10">Features</h6>
+            <div class="space-y-7 text-4xl">
+              <p>Business Marketing</p>
+              <p>User Analytic</p>
+              <p>Live Chat</p>
+              <p>Unlimited Support</p>
+            </div>
+          </div>
+
+          <div>
+            <h6 class="font-bold text-5xl mb-10">Resources</h6>
+            <div class="space-y-7 text-4xl">
+              <p>IOS & Android</p>
+              <p>Watch a Demo</p>
+              <p>Customers</p>
+              <p>API</p>
+            </div>
+          </div>
+
+          <div>
+            <h6 class="font-bold text-5xl mb-10">Get In Touch</h6>
+            <div class="space-y-10 text-4xl">
+              <div class="flex space-x-3">
+                <img class="w-10" src="call-logo.png" />
+                <p>(480) 555-0103</p>
+              </div>
+
+              <div class="flex space-x-3">
+                <img class="w-9" src="loc-logo.png" />
+                <p>4517 Washington Ave.</p>
+              </div>
+
+              <div class="flex space-x-3">
+                <img class="w-10" src="send_btn.png" />
+                <p>debra.holt@example.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white">
+        <div class="px-30 py-30 space-y-16">
+          <p class="text-4xl text-[#737373]">
+            Made With Love By Figmaland All Right Reserved
+          </p>
+          <div class="flex space-x-10">
+            <img class="w-10 -mr-2" src="facebook.png" />
+            <img class="w-10" src="instagram.png" />
+            <img class="w-12" src="x.png" />
+            <img class="w-10" src="youtube.png" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
